# FDMT

./: Dockerfile  pyproject.toml
.github/workflows/: continuous-deployment.yml  continuous-integration.yml
fdmt/: cpu_fdmt.py  fdmt.py  fdmt_ctest.c  fdmt_ctest.py  fdmt_functional.py  fdmt_njit.py  test_cplus.py
fdmt/ctests/: fdmt_cyfuncs.c  fdmt_cyfuncs.pyx
fdmt/libcpp/: fdmt_cplus.cpp
