[tool.poetry]
name = "fdmt"
version = "0.1.0"
description = "Fast Dispersion Measure Transform (FDMT) for SPS"
authors = ["CHIME SPS <chime_spawg@physics.mcgill.>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
astropy = "~5.2"
attrs = "^22.2.0"
numpy = "^1.24.3"
prometheus-client = "^0.17.1"
pytz = "^2023.3"
scipy = "^1.10.1"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
